# pytorch-music-generation

./: .gitignore  SongRNN.py  config.json  cuda.py  makefile  pyproject.toml  song_generated.txt  train.py  util.py
checkpoint/: ckpt_mdl_lstm_ep_10_hsize_150_dout_0.1.t9  ckpt_mdl_lstm_ep_3_hsize_150_dout_0.1.t2  ckpt_mdl_lstm_ep_40_hsize_150_dout_0.1.t20  ckpt_mdl_lstm_ep_40_hsize_150_dout_0.1.t39
ldtm/: SongRNN.py  dataLoader.py  generate.py  main.py  train.py  util.py
songs/: rnn_150.txt  rnn_200.txt  rnn_250.txt  song_generated.txt  song_generated_lstm_temp_0.5.txt  song_generated_lstm_temp_1.txt  song_generated_lstm_temp_2.txt
writeup/: references.bib  writeup.aux  writeup.bbl  writeup.blg  writeup.fdb_latexmk  writeup.fls  writeup.tex
writeup/sections/: abstract.tex  contributions.tex  discussion.tex  intro.tex  methods.tex  related.tex  results.tex
