[tool.poetry]
name = "ldtm"
version = "0.1.0"
description = "Long Darren Term Memory"
authors = ["Nathan Thomas <nathanthomas707@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
rich = "^13.7.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"

[tool.poetry.scripts]
ldtm = "ldtm.main:main"


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.52"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
